合并代码